--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bcrypt": "^3.0.0",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "jsonwebtoken": "^8.3.0",
     "monolog": "0.0.5",
     "mysql": "^2.16.0",
     "nodemon": "^1.18.3",
