--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^8.3.0",
     "monolog": "0.0.5",
     "mysql": "^2.16.0",
+    "nodemailer": "^4.6.7",
     "nodemon": "^1.18.3",
     "promise-mysql": "^3.3.1"
   }
