--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Backend Services for Khoj<TBA>",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "keywords": [
     "project",
@@ -15,8 +15,11 @@
   "dependencies": {
     "bcrypt": "^3.0.0",
     "body-parser": "^1.18.3",
+    "chai": "^4.1.2",
+    "cluster": "^0.7.7",
     "express": "^4.16.3",
     "jsonwebtoken": "^8.3.0",
+    "mocha": "^5.2.0",
     "monolog": "0.0.5",
     "mysql": "^2.16.0",
     "nodemailer": "^4.6.7",
