--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "body-parser": "^1.18.3",
     "chai": "^4.1.2",
     "cluster": "^0.7.7",
+    "ddos": "^0.1.31",
     "express": "^4.16.3",
+    "fb": "^2.0.0",
     "jsonwebtoken": "^8.3.0",
     "mocha": "^5.2.0",
     "monolog": "0.0.5",
